@@ -1,3 +1,4 @@
+#include "in_joystick.h"
 #include "flykeyboard.h"
 
 struct StarShipControlKeyboard {
@@ -172,7 +173,10 @@ void FlyByKeyboard::Execute () {
 
   SSCK.dirty=true;
 #undef SSCK
-  FlyByWire::Execute();
+
+  if(!(joystick[0]!=NULL && joystick[0]->isAvailable())){ // how do I get the wanted joystick at this point (global configuration file/class)
+    FlyByWire::Execute();
+  }
 }
 
 
